yoshimi 1.5.2 M

2017-8-7 Will
* Part effects now display on CLI direct access call.

2017-8-5 Will
* Master reset no longer needs threadmessage function.
* Further cleanups and doc corrections.
* Started revising sys/ins effects & replacing callbacks.
  This will help make CLI and GUI consistent.

2017-8-4 Will
* Properly integrated all patchset saves.
* Improved patchset load operations & messaging.
* BugFix: segfault if CLI load with garbage filename.
* Fixed regression. LV2 not loading patch sets.
  These are now properly contained, but I forgot to
  update (LV2 only) putalldata :(
* Patched in Jesper's improved Console scroll behavoir.
  New entries now at bottom and always visible unless
  scroll bars moved.

2017-8-3 Will
* BugFix: Insertion effects were always on.
* Minor date corrections etc.
* Removed redundant internal part mute.
  Never activated and partonoff more sophisticated.
* A few more cleanups.

2017-8-2 Will
* Small add/sub memory allocation optimisation.

2017-8-1 Will
* Removed mutex locks from patchset save.
  No longer needed, so patch sets and states
  now save silently.
* Fixed regression. Vectors update 'recent' again.
* Added 'Microtonal Ratio Scale' to examples.

2017-7-31 Will
* Improved config save operations & messaging.
* Minor doc corrections & speeling chocks :)

2017-7-30 Will
* Corrected minor XML LV2 anomaly.
* Optimised 'returnsDirect' access.
* Loading scales from GUI now updates it!
* Added microtonal demos to 'Examples'.
* Console window now monospaced font.
* Scales can now be loaded from histories.
* Doc updates.
* Improved scales load & save operations & messaging.
* Further restructuring of Vectors.

2017-7-29 Will
* Improved vector saving management.
* Reset & state load now update Vector name :p

2017-7-28 Will
* Refactored vector data structure.
* It hasn't been purely nrpn based for a long time!
* Further vector refactoring for overall consistency.
* Updated docs.
* Bugfix: Missing 'break' stopped patchset loads :(